--- a/index.html
+++ b/index.html
@@ -11,28 +11,42 @@
   <body>
     <!-- Table -->
     <div class="container">
-      <table>
+      <table border="1">
         <tr>
-          <th>NIM</th>
+          <th>No</th>
+          <th>Img</th>
           <th>Nama</th>
-          <th>Jurusan</th>
-          <th>Alamat</th>
           <th>Action</th>
         </tr>
         <tr>
-          <td>123321</td>
+          <td>1</td>
+          <td>
+            <img src="./1.jpg" height="200px" alt="" />
+          </td>
           <td>Fernando</td>
-          <td>Sistem Informasi</td>
-          <td>Bogor</td>
-          <td class="action">
-            <a href="#"><i data-feather="circle"></i> Lihat Data</a>
+          <td>
+            <a href="./table/table-1.html" class="action">Details</a>
           </td>
         </tr>
         <tr>
-          <td>123321</td>
-          <td>Fernando</td>
-          <td>Sistem Informasi</td>
-          <td>Bogor</td>
+          <td>2</td>
+          <td>
+            <img src="./2.jpg" height="200px" alt="" />
+          </td>
+          <td>Ady</td>
+          <td>
+            <a href="./table/table-2.html" class="action">Details</a>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>
+            <img src="./3.jpg" height="200px" alt="" />
+          </td>
+          <td>Budi</td>
+          <td>
+            <a href="./table/table-3.html" class="action">Details</a>
+          </td>
         </tr>
       </table>
     </div>
